@@ -1,3 +1,11 @@
+1998-10-01  Yo Ric Dude  <ricdude@ix.netcom.com>
+
+	* audio_alsa.c: multiple audio card detection patches from Bibek.
+  	This should open and use the first available card under ALSA.  It
+ 	has been tested on single card systems, and works fine.  However,
+ 	no one with multiple audio cards has tested this, so if anyone is
+ 	feeling brave and adventurous... =)
+
 1998-10-01  Yo Ric Dude  <ericmit@ix.netcom.com>
 
 	* esd.h, esdlib.c: why sample size is treated as a long in esdlib,
